# graphene-django-cud

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE.md  Makefile  Pipfile  README.md  manage.py  pyproject.toml  setup.py  test_settings.py
.github/workflows/: pre-commit.yml  primary.yml
docs/: conf.py  index.rst
docs/_ext/: graphql_lexer.py
docs/guide/: auto-context-fields.rst  custom-field-handling.rst  custom-fields.rst  field-mappings.rst  field-types.rst  included-and-excluded-fields.rst  install.rst  limitations.rst  mutations.rst  naming.rst  nested-fields.rst  optional-fields.rst  other-hooks.rst  permissions.rst  required-output-field.rst  reusing-types.rst  signals.rst  subscriptions.rst  usage.rst  validation.rst
docs/ref/: conversion.rst  custom-types.rst  mutation-lifecycle.rst
docs/ref/models/: DjangoBatchCreateMutation.rst  DjangoBatchDeleteMutation.rst  DjangoBatchPatchMutation.rst  DjangoBatchUpdateMutation.rst  DjangoCreateMutation.rst  DjangoDeleteMutation.rst  DjangoFilterDeleteMutation.rst  DjangoFilterUpdateMutation.rst  DjangoPatchMutation.rst  DjangoUpdateMutation.rst  index.rst
graphene_django_cud/: asgi.py  consts.py  converter.py  mutations.py  registry.py  settings.py  signals.py  str_converters.py  types.py  urls.py  util.py  ws_urls.py  wsgi.py
graphene_django_cud/mutations/: __init__.py  batch_create.py  batch_delete.py  batch_patch.py  batch_update.py  core.py  create.py  delete.py  filter_delete.py  filter_update.py  patch.py  update.py
graphene_django_cud/subscriptions/: core.py  create.py  delete.py  signal.py  update.py
graphene_django_cud/tests/: dummy_query.py  factories.py  models.py  schema.py  test_batch_create_mutation.py  test_batch_delete_mutation.py  test_batch_patch_mutation.py  test_batch_update_mutation.py  test_batchdeletemutation.py  test_converter.py  test_create_mutation.py  test_delete_mutation.py  test_filter_update_mutation.py  test_mutations.py  test_patch_mutation.py  test_update_mutation.py  test_util.py  urls.py  util.py
graphene_django_cud/tests/migrations/: 0001_initial.py  0002_auto_20190718_1144.py  0002_dog_tag.py  0003_auto_20190718_1149.py  0003_dog_breed.py  0004_mouse_keeper.py  (+5 more)
graphene_django_cud/util/: __init__.py  dict.py  model.py  string.py
